20070612 code: compilation tools now produce dual architecture binaries on
               OS X by default.
20070613 code: reverted previous change - new cpj tools provide explicit
               cross compilation.
20070615 code: updated to new cpj tool and new sysdeps.
20070617 code: strange bug related to large signed constants on IA64.
               -0xffffffff == 1, -0xffffffffL == -0xffffffff. this does
               not affect any library code, it simply required an
               adjustment to the unit tests.
20070617 code: fmt_char*() becomes signed char.
20070619 code: removed uint entirely. in practice, it is too difficult
               to use correctly.
20070625 code: reimplementation of array, including array_catn with a
               common core.
20070626 code: added dqueue.
20070708 code: added dir_walk.
20070711 code: fixed bug in array_index. calling array_index(&a, 0) on
               a zero length array will return a pointer to the first,
               nonexistant element. this is not dangerous in the sense
               that it does not access unallocated memory, but it is
               obviously incorrect.
20070727 version: corelib 0.57
20070727 code: correct dir_walk test.
20070803 code: added dir_name_r and base_name_r. dir_name and base_name are
               now compatibility wrappers around these functions.
20070803 code: added dealloc_null.
20070803 code: added dstack.
20070916 code: dir_array now takes void * argument to comparison function.
               structure contains new void pointer for passing user data to
               comparison functions.
20070922 code: now using 4096 instead of PATH_MAX due to idiotic portability
               problems associated with this constant.
20070928 code: changed dir_array API to what it should have been right from
               the beginning. backwards compat has been mercilessly killed.
20071001 code: added *_ZERO macros to all interfaces that appear to need them.