@@ -1,3 +1,4 @@
 t_scan_float.o
 ../scan.a
+../str.a
 t_assert.o
