@@ -26,7 +26,7 @@ unsigned int scan_float(const char *str, float *f)
   exp = 0;
   exp_sign = 0;
 
-  if (str[0] == '-') ++str;
+  if (str[0] == '-') ++pos;
 
   for (;;) {
     ch = str[pos];
